--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,11 @@
             <version>${kotlinx-coroutines.version}</version>
         </dependency>
         <!-- needed for completable future -> coroutine -->
-        <!-- <dependency>
-             <groupId>org.jetbrains.kotlinx</groupId>
-             <artifactId>kotlinx-coroutines-jdk8</artifactId>
-             <version>${kotlinx-coroutines.version}</version>
-         </dependency>-->
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-jdk8</artifactId>
+            <version>${kotlinx-coroutines.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
